# agent_manager

./: .gitignore  ARCHITECTURE.md  PROJECT_PLAN.md  README.md  answer.md  data.txt  pyproject.toml  sample.db  schema.sql  start_streamlit.bat
backend/: main.py
backend/routers/: agents.py  crew.py  outputs.py  tools.py  trace.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AppSidebar.tsx
frontend/src/pages/: AgentManager.tsx  Dashboard.tsx  OutputViewer.tsx  ToolRegistry.tsx  TraceAudit.tsx
frontend/src/store/: appStore.ts
multi_agent_app/: .env.example  README.md  __init__.py  main.py  requirements.txt
multi_agent_app/agents/: __init__.py  db_reader_agent.py  db_writer_agent.py  final_agent.py  rag_agent.py  web_agent.py
multi_agent_app/core/: __init__.py  graph.py  state.py  supervisor.py  utils.py
multi_agent_app/db/: __init__.py
multi_agent_app/prompts/: __init__.py  agent_prompts.py  supervisor_prompt.py
multi_agent_app/sample_data/: __init__.py  company_policy.txt  create_sample_db.py  sample_report.txt
multi_agent_app/tools/: db_tools.py  rag_tools.py  web_tools.py
output/: crewAI_report.md  sales_summary.csv
src/my_first_crew/: agent_designer.py  agent_registry.py  answer.md  app.py  capability_registry.py  crew.py  crew_builder.py  dynamic_crew.py  encoding_setup.py  execution_monitor.py  main.py  models.py  output_manager.py
src/my_first_crew/config/: agents.yaml  skills.yaml  tasks.yaml  tool_groups.yaml
(+21 files in other folders)
