[project]
name = "my_first_crew"
version = "0.1.0"
description = "my-first-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "chromadb>=1.1.1",
    "crewai[google-genai,tools]==1.14.4",
    "langchain>=1.2.17",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pyodbc>=5.3.0",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
]

[project.scripts]
my_first_crew = "my_first_crew.main:run"
run_crew = "my_first_crew.main:run"
train = "my_first_crew.main:train"
replay = "my_first_crew.main:replay"
test = "my_first_crew.main:test"
run_with_trigger = "my_first_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
